--- a/index.html
+++ b/index.html
@@ -5,19 +5,18 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Burmese Syllabe</title>
     <script src="myamar_syllabe.js"></script>
 </head>
 <body>
         <div class="container">
-        <div class='h1'> JavaScript String Only Tutorial (Burmese Syllae)</div>
+        <div class='h1'> JavaScript String Only Tutorial (Burmese Syllabe)</div>
                 <div class="row">
                   <div class="col-sm">
-                        <textarea id="from" rows="20" cols="50">
-                            </textarea>
+                        <textarea id="from" rows="10" cols="30">သီဟိုဠ်မှ ဉာဏ်ကြီးရှင်သည် အာယုဝဍ္ဎနဆေးညွှန်းစာကို ဇလွန်ဈေးဘေး ဗာဒံပင်ထက် အဓိဋ္ဌာန်လျက် ဂဃနဏဖတ်ခဲ့သည်။</textarea>
                   </div>
                   <div class="col-sm">
-                        <textarea id="to" rows="20" cols="50">
+                        <textarea id="to" rows="10" cols="30">
                             </textarea>
                   </div>
                   
@@ -31,6 +30,11 @@
         console.log(myamar_syllabe.change())
         document.getElementById('to').value=myamar_syllabe.change().toString()
     };
+    window.onload=function(){
+        var myamar_syllabe=new Kth(from.value)
+        console.log(myamar_syllabe.change())
+        document.getElementById('to').value=myamar_syllabe.change().toString()
+    }
    
     </script>
 </body>
